--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             
             <header>
                 <div align="center"  class="home">
-                    <img src="../rcs/tonyLogo.png" alt="index_logo" width="100%" class="logo">
+                    <img src="/rcs/tonyLogo.png" alt="index_logo" width="100%" class="logo">
                     <div class="toni">
                     <a href="../index.html">ANTONIO ISLAS</a>
                     </div>
